--- a/casamento/webroot/css/theme.css
+++ b/casamento/webroot/css/theme.css
@@ -1,4 +1,4 @@
-/*---------------------------------------------------- 	General------------------------------------------------------*/
+/*--------------------------- General ------------------------------------*/
 body {
 	font-family:'Montserrat',sans-serif;
 	font-size:16px;
@@ -24,7 +24,7 @@ a,a:hover {
 	text-decoration: none;
 }
 img {max-width: 100%;}
-/*---------------------------------------------------- 	Menu------------------------------------------------------*/
+/*--------------------------- Menu ------------------------------------*/
 .navbar {
 	border-bottom: 3px solid #ff8500;
 	padding: 5px 0;
@@ -137,11 +137,11 @@ img {max-width: 100%;}
 	-moz-transition:all .5s;
 	-webkit-transition:all .5s;
 	transition:all .5s;
-		background:#111;
+	background:#111;
 }
 .isFixed {
 	background:#333;
-		-o-transition:all .5s;
+	-o-transition:all .5s;
 	-ms-transition:all .5s;
 	-moz-transition:all .5s;
 	-webkit-transition:all .5s;
@@ -154,18 +154,18 @@ img {max-width: 100%;}
 	.collapse {background: #333;}
 	.navbar.navbar-inverse.navbar-static-top a {padding: 15px 16px;line-height: 15px;font-size: 13px;}
 }
-/*---------------------------------------------------- 	Intro------------------------------------------------------*/
+/*--------------------------- Intro ------------------------------------*/
 header {
 	padding-bottom: 63px;
 }
 .intro {
-	font-family:'Playball',cursive;
-	font-size:60px;
-	line-height:1.0;
+	font-family: 'Playball',cursive;
+	font-size: 30px;
+	line-height: 1.0;
 	font-weight: 900;
-	color:#fff;
+	color: #fff;
 }
-/*---------------------------------------------------- 	Parallax------------------------------------------------------*/
+/*--------------------------- Parallax ------------------------------------*/
 .parallax {
 	/*text-align: center;*/
 	background-position: center bottom;
@@ -179,12 +179,15 @@ header {
 	background-image:url(../img/pattern.png);
 	background-repeat: repeat;
 }
-.parallax .container-fluid{
+.parallax .texts{
 	height: 580px;
     padding-top: 115px;
     margin-right: 10px;
 }
-/*---------------------------------------------------- 	Heading------------------------------------------------------*/
+.parallax .clock{
+    margin: 45px 0;
+}
+/*--------------------------- Heading ------------------------------------*/
 .heading {
 	padding-bottom:15px;
 	text-align:center;
@@ -207,10 +210,10 @@ header {
 	font-size:16px;
 	line-height:1.7;
 }
-img#site-title {
+img#monogram {
 	max-width: 320px;
 }
-/*---------------------------------------------------- 	Team------------------------------------------------------*/
+/*--------------------------- Team ------------------------------------*/
 .papers,.papers:before,.papers:after {
 	background-color:#fff;
 	border:1px solid #ccc;
@@ -258,7 +261,7 @@ img#site-title {
 	max-width:100%;
 	margin-bottom: 5px;
 }
-/*---------------------------------------------------- 	Restaurant Menu------------------------------------------------------*/
+/*--------------------------- Restaurant -----------------------------------------*/
 .restmenuwrap {
 	box-shadow:inset 0 0 0 16px #fff,inset 0 0 0 17px #eee,inset 0 0 0 18px #fff,inset 0 0 0 19px #eee,inset 0 0 0 20px #fff,inset 0 0 0 21px #eee,0 4px 20px rgba(0,0,0,0.1);
 	-webkit-transform:translateZ(0px);
@@ -297,7 +300,7 @@ img#site-title {
 	color:#cc580c;
 	border-bottom: 4px double #eee;
 }
-/*---------------------------------------------------- 	Gallery Events------------------------------------------------------*/
+/*--------------------------- Gallery -------------------------------------------*/
 /* General style */
 .grid-gallery ul {
 	list-style:none;
@@ -543,7 +546,7 @@ span.nav-close:before {
 			width: 100%;
 	}
 }
-/*---------------------------------------------------- 	Contact------------------------------------------------------*/
+/*--------------------------- Contact ------------------------------------*/
 input.contact {
 	background:#fff;
 	border:solid 1px #ddd;
@@ -597,7 +600,7 @@ textarea.contact {
 		width: 48.5%;
 	}
 }
-/*----------------------------------------------------	 8. Footer Style------------------------------------------------------*/
+/*--------------------------- 8. Footer Style ------------------------------------*/
 .footer {
 	background:#cc580c;
 	margin-top:120px;
