--- a/casamento/webroot/css/theme.css
+++ b/casamento/webroot/css/theme.css
@@ -402,6 +402,9 @@ blockquote cite:before {
 }
 
 /*--------------------------- Nossa História ------------------------------------*/
+#history{
+	padding-bottom: 50px;
+}
 .our-story {
     margin-bottom: 30px;
     margin-top: 0;
@@ -416,7 +419,6 @@ blockquote cite:before {
   text-shadow: 0 0 1px white, 0 1px 2px rgba(0, 0, 0, 0.3);
 }
 
-
 /*--------------------------- Cerimônia ------------------------------------*/
 #ceremony h4 {
 	color: #333;
@@ -424,3 +426,154 @@ blockquote cite:before {
 #ceremony .panel-body {
 	padding: 5px;
 }
+
+/*--------------------------- Slider ------------------------------------*/
+/* jssor slider bullet navigator skin 05 css */
+    /*
+    .jssorb05 div           (normal)
+    .jssorb05 div:hover     (normal mouseover)
+    .jssorb05 .av           (active)
+    .jssorb05 .av:hover     (active mouseover)
+    .jssorb05 .dn           (mousedown)
+    */
+    .jssorb05 {
+        position: absolute;
+    }
+    .jssorb05 div, .jssorb05 div:hover, .jssorb05 .av {
+        position: absolute;
+        /* size of bullet elment */
+        width: 16px;
+        height: 16px;
+        background: url('../img/img/b05.png') no-repeat;
+        overflow: hidden;
+        cursor: pointer;
+    }
+    .jssorb05 div { background-position: -7px -7px; }
+    .jssorb05 div:hover, .jssorb05 .av:hover { background-position: -37px -7px; }
+    .jssorb05 .av { background-position: -67px -7px; }
+    .jssorb05 .dn, .jssorb05 .dn:hover { background-position: -97px -7px; }
+
+    /* jssor slider arrow navigator skin 22 css */
+    /*
+    .jssora22l                  (normal)
+    .jssora22r                  (normal)
+    .jssora22l:hover            (normal mouseover)
+    .jssora22r:hover            (normal mouseover)
+    .jssora22l.jssora22ldn      (mousedown)
+    .jssora22r.jssora22rdn      (mousedown)
+    */
+    .jssora22l, .jssora22r {
+        display: block;
+        position: absolute;
+        /* size of arrow element */
+        width: 40px;
+        height: 58px;
+        cursor: pointer;
+        background: url('../img/img/a22.png') center center no-repeat;
+        overflow: hidden;
+    }
+    .jssora22l { background-position: -10px -31px; }
+    .jssora22r { background-position: -70px -31px; }
+    .jssora22l:hover { background-position: -130px -31px; }
+    .jssora22r:hover { background-position: -190px -31px; }
+    .jssora22l.jssora22ldn { background-position: -250px -31px; }
+    .jssora22r.jssora22rdn { background-position: -310px -31px; }
+    #jssor_slider .loading {
+    	background:url('../img/loading-heart.gif') no-repeat center center;
+    	position:absolute;
+    	display:block;
+    	top:0px;
+    	left:0px;
+    	width:100%;
+    	height:100%;
+    }
+    /* jssor slider thumbnail navigator skin 16 css */
+    /*
+    .jssort16 .p            (normal)
+    .jssort16 .p:hover      (normal mouseover)
+    .jssort16 .pav          (active)
+    .jssort16 .pav:hover    (active mouseover)
+    .jssort16 .pdn          (mousedown)
+    */
+    .jssort16 .p {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 200px;
+        height: 100px;
+    }
+    
+    .jssort16 .t {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 200px;
+        height: 100px;
+        border: none;
+    }
+    
+    .jssort16 .p img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 200px;
+        height: 100px;
+        filter: alpha(opacity=55);
+        opacity: .55;
+        transition: opacity .6s;
+        -moz-transition: opacity .6s;
+        -webkit-transition: opacity .6s;
+        -o-transition: opacity .6s;
+    }
+    
+    .jssort16 .pav img, .jssort16 .pav:hover img, .jssort16 .p:hover img {
+        filter: alpha(opacity=100);
+        opacity: 1;
+        transition: none;
+        -moz-transition: none;
+        -webkit-transition: none;
+        -o-transition: none;
+    }
+    
+    .jssort16 .pav:hover img, .jssort16 .p:hover img {
+        filter: alpha(opacity=70);
+        opacity: .7;
+    }
+    
+    .jssort16 .title, .jssort16 .title_back {
+        position: absolute;
+        bottom: 0px;
+        left: 0px;
+        width: 200px;
+        height: 30px;
+        line-height: 30px;
+        text-align: center;
+        color: #000;
+        font-size: 20px;
+    }
+    
+    .jssort16 .title_back {
+        background-color: #fff;
+        filter: alpha(opacity=50);
+        opacity: .5;
+    }
+    
+    .jssort16 .pav .title_back {
+        background-color: #000;
+        filter: alpha(opacity=50);
+        opacity: .5;
+    }
+    
+    .jssort16 .pav .title {
+        color: #fff;
+    }
+    
+    .jssort16 .p.pav:hover .title_back, .jssort16 .p:hover .title_back {
+        filter: alpha(opacity=40);
+        opacity: .4;
+    }
+    
+    .jssort16 .p.pdn img {
+        filter: alpha(opacity=100);
+        opacity: 1;
+    }
