--- a/casamento/webroot/css/theme.css
+++ b/casamento/webroot/css/theme.css
@@ -27,6 +27,14 @@ img {max-width: 100%;}
     background-attachment: fixed;
     position: relative;
 }
+.highlight {
+    padding: 9px 14px;
+    margin-bottom: 14px;
+    background-color: #f7f7f9;
+    border: 1px solid #e1e1e8;
+    border-radius: 4px;
+}
+
 /*--------------------------- Menu ------------------------------------*/
 .navbar {
 	border-bottom: 3px solid #ff8500;
@@ -313,7 +321,7 @@ textarea.contact {
 /*--------------------------- Footer Style ------------------------------------*/
 .footer {
 	background:#cc580c;
-	margin-top:120px;
+	margin-top:60px;
 	position:relative;
 }
 .footer .container {
@@ -344,33 +352,40 @@ textarea.contact {
 }
 blockquote {
 	font-style:italic;
-	margin:0 0 0px 0;
-	padding:20px 70px 10px;
+	margin:5px 0 0 0;
+	padding:13px 50px 0;
 	position:relative;
-	font-size:13px;
+	font-size:14px;
 	border:0;
+	border-bottom: 1px dashed #ccc;
 }
 blockquote:before {
 	display:block;
 	content:"\201C";
-	font-size:120px;
+	font-size:80px;
 	position:absolute;
 	left:10px;
 	top:-30px;
 	color:#cc580c;
 	font-family:Georgia;
 }
-blockquote cite {
+blockquote cite, blockquote date {
 	color:#cc580c;
-	font-size:14px;
-	display:block;
-	margin-top:5px;
-	text-align:right;
+	font-size:12px;
+	display:inline;
+	text-align:left;
 }
-blockquote cite:before {
-	content: "\2014 \2009";
+blockquote cite {
+	padding-left: 10px;
 }
-
+blockquote cite:after {
+	content: "\2014";
+}
+#list_message {
+	margin-top: 15px;
+	/*max-height: 300px;*/
+	/*overflow-y: scroll;*/
+}
 
 /*--------------------------- Title Style ------------------------------------*/
 .title {
@@ -452,4 +467,20 @@ a.thumbnail:hover, a.thumbnail:focus, a.thumbnail.active {
 }
 #box-confirm.bg-danger{
     border: 1px solid #D9534F;
+}
+
+/*--------------------------- Form mensagens ----------------------------*/
+#add_message #box-confirm {
+    margin-top: 0;
+}
+#add_message .row {
+    padding: 20px 0;
+}
+
+/*--------------------------- Lista de presentes ----------------------------*/
+#present img{
+	cursor: pointer;
+}
+#present img:hover{
+	border-color: #cc580c;
 }
