--- a/casamento/webroot/css/theme.css
+++ b/casamento/webroot/css/theme.css
@@ -6,6 +6,7 @@ body {
 	color:#777;
 	font-weight:400;
 	overflow-x:hidden;
+	padding-top: 53px;
 }
 .playball {
 	font-family:'Playball',cursive;
@@ -34,144 +35,189 @@ img {max-width: 100%;}
     border: 1px solid #e1e1e8;
     border-radius: 4px;
 }
+section {
+	padding-top: 20px;
+}
 
 /*--------------------------- Menu ------------------------------------*/
 .navbar {
 	border-bottom: 3px solid #ff8500;
 	margin-bottom: 0;
+	padding: 0;
 }
-.navbar-header {
+.nav-main {
 	font-family: 'Cookie', cursive;
-}
-.navbar-default .navbar-brand {
-    color: #ff8500;
-}
-.navbar-brand {
+    color: #ff8500!important;
 	font-size: 40px;	
 }
-.nav>li>a {
-	display: inline-block;
+.navbar-nav.navbar-right:last-child {
+    margin-right: 0px;
 }
-.navbar-nav>li {
-	float: none;
-	display: inline-block;
+@media (max-width: 1100px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+		top: 0;
+		border-width: 0 0 1px;
+	}
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+		margin-top: 7.5px;
+	}
+	.navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in{
+  		display:block !important;
+	}
 }
-.navbar-nav {
-	margin: 0 auto;
-	text-align: center;
-	float: none;
-}
-.isFixed {
-	left:0px;
-	width:100%;
-}
-.menu {
-	 margin-top:0px;
-	 position:absolute;
-	 z-index:999;
-	 margin-top:20px;
-	 left:0px;
-	 right:0px;
-	 bottom:0;
-}
-.menu .container-fluid {
-	padding-right: 60px;
-    padding-left: 60px;
-}
-.navArea {
-	float:right;
-}
-.navwrapper .container {
-	padding:0;
-	width:auto;
-}
-.navbar-toggle {
-	margin-top: 14px;
-}
+/*.navbar-header {*/
+/*}*/
+/*.navbar-default .navbar-brand {*/
+/*}*/
+/*.navbar-brand {*/
+/*}*/
+/*.nav>li>a {*/
+/*	display: inline-block;*/
+/*}*/
+/*.navbar-nav>li {*/
+/*	float: none;*/
+/*	display: inline-block;*/
+/*}*/
+/*.navbar-nav {*/
+/*	margin: 0 auto;*/
+/*	text-align: center;*/
+/*	float: none;*/
+/*}*/
+/*.isFixed {*/
+/*	left:0px;*/
+/*	width:100%;*/
+/*}*/
+/*.menu {*/
+/*	 margin-top:0px;*/
+/*	 position:absolute;*/
+/*	 z-index:999;*/
+/*	 margin-top:20px;*/
+/*	 left:0px;*/
+/*	 right:0px;*/
+/*	 bottom:0;*/
+/*}*/
+/*.menu .container-fluid {*/
+/*	padding-right: 60px;*/
+/*    padding-left: 60px;*/
+/*}*/
+/*.navArea {*/
+/*	float:right;*/
+/*}*/
+/*.navwrapper .container {*/
+/*	padding:0;*/
+/*	width:auto;*/
+/*}*/
+/*.navbar-toggle {*/
+/*	margin-top: 14px;*/
+/*}*/
  /*Special class on .container surrounding .navbar,used for positioning it into place. */
-.navbar-wrapper {
-	margin-top:0px;
-	height:80px;
-	position:relative;
-	z-index:15;
-}
-.navbar-wrapper .container {
-	padding:0px;
-}
-.navbar-collapse {
-	padding:0;
-}
-.navbar-collapse.in {
-	max-height:100%;
-}
-.navbar.navbar-inverse.navbar-static-top {
-	margin:0px auto;
-	background:none;
-	color:#c3c8d6;
-	border:none;
-	font-family:'Open Sans',sans-serif;
-	font-size:14px;
-	font-weight:600;
-	text-transform:uppercase;
-}
-.navbar.navbar-inverse.navbar-static-top a {
-	color:#fff;
-	padding:31px 16px;
-	line-height:18px;
-	text-align:center;
-}
-.navbar.navbar-inverse.navbar-static-top a:hover {
-	background:none;
-	color:#fff;
-}
-.navbar-inverse .navbar-nav>.active>a,.navbar-inverse .navbar-nav>.active>a:focus {
-	background:none;
-	color:#fff !important;
-}
-.navbar-inverse .navbar-nav>.active>a:hover {
-	color:#fff;
-}
-.hideClass {
-	display:none;
-}
-.isFixed .navbar-inverse .navbar-nav>.active>a,.isFixed .navbar-inverse .navbar-nav>.active>a:focus {
-	background:#cc580c;
-	color:#fff;
-}
-.isFixed .navbar.navbar-inverse.navbar-static-top a:hover {
-	background:#cc580c;
-	color:#fff;
-}
-.isFixed .navbar.navbar-inverse.navbar-static-top a {
-	color:#fff;
-}
-.stuckMenu {
-	-o-transition:all .5s;
-	-ms-transition:all .5s;
-	-moz-transition:all .5s;
-	-webkit-transition:all .5s;
-	transition:all .5s;
-	background:#111;
-}
-.isFixed {
-	background:#333;
-	-o-transition:all .5s;
-	-ms-transition:all .5s;
-	-moz-transition:all .5s;
-	-webkit-transition:all .5s;
-	transition: all .5s;
-}
-.collapse {
-	display: block !important;
-}
-@media (max-width: 655px) {
-	.collapse {background: #333;}
-	.navbar.navbar-inverse.navbar-static-top a {padding: 15px 16px;line-height: 15px;font-size: 13px;}
-}
+/*.navbar-wrapper {*/
+/*	margin-top:0px;*/
+/*	height:80px;*/
+/*	position:relative;*/
+/*	z-index:15;*/
+/*}*/
+/*.navbar-wrapper .container {*/
+/*	padding:0px;*/
+/*}*/
+/*.navbar-collapse {*/
+/*	padding:0;*/
+/*}*/
+/*.navbar-collapse.in {*/
+/*	max-height:100%;*/
+/*}*/
+/*.navbar.navbar-inverse.navbar-static-top {*/
+/*	margin:0px auto;*/
+/*	background:none;*/
+/*	color:#c3c8d6;*/
+/*	border:none;*/
+/*	font-family:'Open Sans',sans-serif;*/
+/*	font-size:14px;*/
+/*	font-weight:600;*/
+/*	text-transform:uppercase;*/
+/*}*/
+/*.navbar.navbar-inverse.navbar-static-top a {*/
+/*	color:#fff;*/
+/*	padding:31px 16px;*/
+/*	line-height:18px;*/
+/*	text-align:center;*/
+/*}*/
+/*.navbar.navbar-inverse.navbar-static-top a:hover {*/
+/*	background:none;*/
+/*	color:#fff;*/
+/*}*/
+/*.navbar-inverse .navbar-nav>.active>a,.navbar-inverse .navbar-nav>.active>a:focus {*/
+/*	background:none;*/
+/*	color:#fff !important;*/
+/*}*/
+/*.navbar-inverse .navbar-nav>.active>a:hover {*/
+/*	color:#fff;*/
+/*}*/
+/*.hideClass {*/
+/*	display:none;*/
+/*}*/
+/*.isFixed .navbar-inverse .navbar-nav>.active>a,.isFixed .navbar-inverse .navbar-nav>.active>a:focus {*/
+/*	background:#cc580c;*/
+/*	color:#fff;*/
+/*}*/
+/*.isFixed .navbar.navbar-inverse.navbar-static-top a:hover {*/
+/*	background:#cc580c;*/
+/*	color:#fff;*/
+/*}*/
+/*.isFixed .navbar.navbar-inverse.navbar-static-top a {*/
+/*	color:#fff;*/
+/*}*/
+/*.stuckMenu {*/
+/*	-o-transition:all .5s;*/
+/*	-ms-transition:all .5s;*/
+/*	-moz-transition:all .5s;*/
+/*	-webkit-transition:all .5s;*/
+/*	transition:all .5s;*/
+/*	background:#111;*/
+/*}*/
+/*.isFixed {*/
+/*	background:#333;*/
+/*	-o-transition:all .5s;*/
+/*	-ms-transition:all .5s;*/
+/*	-moz-transition:all .5s;*/
+/*	-webkit-transition:all .5s;*/
+/*	transition: all .5s;*/
+/*}*/
+/*.collapse {*/
+/*	display: block !important;*/
+/*}*/
+/*@media (max-width: 655px) {*/
+/*	.collapse {background: #333;}*/
+/*	.navbar.navbar-inverse.navbar-static-top a {padding: 15px 16px;line-height: 15px;font-size: 13px;}*/
+/*}*/
 /*--------------------------- Intro ------------------------------------*/
-header {
-	padding-bottom: 53px;
-}
+/*header {*/
+/*	padding-bottom: 53px;*/
+/*}*/
 .intro {
 	font-family: 'Great Vibes',cursive;
 	font-size: 45px;
@@ -193,8 +239,6 @@ header {
 	background-image: url(../img/9.jpg);
 }
 .parallax-pattern-overlay {
-	/*background-image:url(../img/pattern.png);*/
-	/*background-repeat: repeat;*/
 	background: rgba(0,0,0,0.35);
 }
 .parallax .texts{
@@ -264,60 +308,7 @@ img#monogram {
   background-image:
     radial-gradient(circle at 10px 15px, white 12px, transparent 13px);
 }
-/*--------------------------- Contact ------------------------------------*/
-input.contact {
-	background:#fff;
-	border:solid 1px #ddd;
-	color:#000;
-	padding:15px 30px;
-	
-	margin-right:3%;
-	margin-bottom:30px;
-	outline:none;
-}
-input.contact.noMarr {
-	margin-right:0px;
-}
-textarea.contact {
-	background:#fff;
-	color:#000;
-	border:solid 1px #ddd;
-	padding:15px 30px;
-	
-	margin-bottom:40px;
-	outline:none;
-	height:150px;
-}
-.contact.submit {
-	background:#333;
-	font-family:'Montserrat',sans-serif;
-	color:#fff;
-	font-size:16px;
-	font-weight:400;
-	text-align:center;
-		margin:0px;
-	border:none !important;
-	border-radius:3px;
-}
-.contact.submit:hover {
-	background:#cc580c;
-}
-.done {
-	display:none;
-}
-.error input,input.error,.error textarea,textarea.error {
-	background-color:#ffffff;
-	border:1px solid red !Important;
-	-webkit-transition:border linear 0.2s,box-shadow linear 0.2s;
-	-moz-transition:border linear 0.2s,box-shadow linear 0.2s;
-	-o-transition:border linear 0.2s,box-shadow linear 0.2s;
-	transition:border linear 0.2s,box-shadow linear 0.2s;
-}
-@media screen and (min-width:768px) {
-	input.contact.col-md-6 {
-		width: 48.5%;
-	}
-}
+
 /*--------------------------- Footer Style ------------------------------------*/
 .footer {
 	background:#cc580c;
@@ -349,42 +340,6 @@ textarea.contact {
 }
 .footer a,.footer a:hover {
 	color:#fff;
-}
-blockquote {
-	font-style:italic;
-	margin:5px 0 0 0;
-	padding:13px 50px 0;
-	position:relative;
-	font-size:14px;
-	border:0;
-	border-bottom: 1px dashed #ccc;
-}
-blockquote:before {
-	display:block;
-	content:"\201C";
-	font-size:80px;
-	position:absolute;
-	left:10px;
-	top:-30px;
-	color:#cc580c;
-	font-family:Georgia;
-}
-blockquote cite, blockquote date {
-	color:#cc580c;
-	font-size:12px;
-	display:inline;
-	text-align:left;
-}
-blockquote cite {
-	padding-left: 10px;
-}
-blockquote cite:after {
-	content: "\2014";
-}
-#list_message {
-	margin-top: 15px;
-	/*max-height: 300px;*/
-	/*overflow-y: scroll;*/
 }
 
 /*--------------------------- Title Style ------------------------------------*/
@@ -475,6 +430,44 @@ a.thumbnail:hover, a.thumbnail:focus, a.thumbnail.active {
 }
 #add_message .row {
     padding: 20px 0;
+}
+
+/*--------------------------- Exibir mensagens ----------------------------*/
+blockquote {
+	font-style:italic;
+	margin:5px 0 0 0;
+	padding:13px 50px 0;
+	position:relative;
+	font-size:14px;
+	border:0;
+	border-bottom: 1px dashed #ccc;
+}
+blockquote:before {
+	display:block;
+	content:"\201C";
+	font-size:80px;
+	position:absolute;
+	left:10px;
+	top:-30px;
+	color:#cc580c;
+	font-family:Georgia;
+}
+blockquote cite, blockquote date {
+	color:#cc580c;
+	font-size:12px;
+	display:inline;
+	text-align:left;
+}
+blockquote cite {
+	padding-left: 10px;
+}
+blockquote cite:after {
+	content: "\2014";
+}
+#list_message {
+	margin-top: 15px;
+	/*max-height: 300px;*/
+	/*overflow-y: scroll;*/
 }
 
 /*--------------------------- Lista de presentes ----------------------------*/
