--- a/casamento/webroot/css/theme.css
+++ b/casamento/webroot/css/theme.css
@@ -423,6 +423,9 @@ a.thumbnail:hover, a.thumbnail:focus, a.thumbnail.active {
 #box-confirm.bg-danger{
     border: 1px solid #D9534F;
 }
+.confirm {
+    border-bottom: 1px dashed #ccc;
+}
 
 /*--------------------------- Form mensagens ----------------------------*/
 #add_message #box-confirm {
